--- a/html/levelup.html
+++ b/html/levelup.html
@@ -31,7 +31,7 @@
             <input type="file" id="log-file-input">
         </div>
         <button id="export_btn" class="green_button">EXPORT</button>
-        <div style="font-size: large; margin-bottom: 10px;">Minimum operational coin amount (set to 0 to disable it): <input id="min_level_currency" type="number" value="0"></div>
+        <div style="font-size: large; margin-bottom: 10px;">Minimum operational coin amount (set to 0 to disable it): <input id="min_level_currency" type="number" value="0" min="0"></div>
     </div>
     
     <table id="units_table">
@@ -56,7 +56,7 @@
                         <option value="princessamazon">princessamazon</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="archer">
                 <td>Archer</td>
@@ -69,7 +69,7 @@
                         <option value="pinningarcher">pinningarcher</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="artillery">
                 <td>Artillery</td>
@@ -82,7 +82,7 @@
                         <option value="sludgeartillery">sludgeartillery</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="balloonbuster">
                 <td>Balloon Buster</td>
@@ -95,7 +95,7 @@
                         <option value="volatilealliesballoonbuster">volatilealliesballoonbuster</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="barbarian">
                 <td>Barbarian</td>
@@ -108,7 +108,7 @@
                         <option value="wildbarbarian">wildbarbarian</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="berserker">
                 <td>Berserker</td>
@@ -121,7 +121,7 @@
                         <option value="wrpathberserker">wrpathberserker</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="blob">
                 <td>Blob</td>
@@ -134,7 +134,7 @@
                         <option value="symbioticblob">symbioticblob</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="bomber">
                 <td>Bomber</td>
@@ -147,7 +147,7 @@
                         <option value="volatilebomber">volatilebomber</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="buster">
                 <td>Buster</td>
@@ -160,7 +160,7 @@
                         <option value="volatilebuster">volatilebuster</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="centurion">
                 <td>Centurion</td>
@@ -173,7 +173,7 @@
                         <option value="mastercenturion">mastercenturion</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="fairy">
                 <td>Fairy</td>
@@ -186,7 +186,7 @@
                         <option value="saviorfairy">saviorfairy</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="flagbearer">
                 <td>Flag Bearer</td>
@@ -199,7 +199,7 @@
                         <option value="threateningflagbearer">threateningflagbearer</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="flyingarcher">
                 <td>Flying Rogue</td>
@@ -212,7 +212,7 @@
                         <option value="swiftflyingarcher">swiftflyingarcher</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="gladiator">
                 <td>Gladiator</td>
@@ -225,7 +225,7 @@
                         <option value="temperedgladiator">temperedgladiator</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="healer">
                 <td>Healer</td>
@@ -238,7 +238,7 @@
                         <option value="vampirichealer">vampirichealer</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="lancer">
                 <td>Lancer</td>
@@ -251,7 +251,7 @@
                         <option value="skylancer">skylancer</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="mage">
                 <td>Mage</td>
@@ -264,7 +264,7 @@
                         <option value="purifiermage">purifiermage</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="monk">
                 <td>Monk</td>
@@ -277,7 +277,7 @@
                         <option value="wrathfulwarriormonk">wrathfulwarriormonk</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="musketeer">
                 <td>Musketeer</td>
@@ -290,7 +290,7 @@
                         <option value="volleymastermusketeer">volleymastermusketeer</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="necromancer">
                 <td>Necromancer</td>
@@ -303,7 +303,7 @@
                         <option value="savantnecromancer">savantnecromancer</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="orcslayer">
                 <td>Orc Slayer</td>
@@ -316,7 +316,7 @@
                         <option value="veteranorcslayer">veteranorcslayer</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="paladin">
                 <td>Paladin</td>
@@ -329,7 +329,7 @@
                         <option value="heavypaladin">heavypaladin</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="phantom">
                 <td>Phantom</td>
@@ -342,7 +342,7 @@
                         <option value="revenantphantom">revenantphantom</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="rogue">
                 <td>Rogue</td>
@@ -355,7 +355,7 @@
                         <option value="swiftfootrogue">swiftfootrogue</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="saint">
                 <td>Saint</td>
@@ -368,7 +368,7 @@
                         <option value="martyrsaint">martyrsaint</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="shinobi">
                 <td>Shinobi</td>
@@ -381,7 +381,7 @@
                         <option value="trickstershinobi">trickstershinobi</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="spy">
                 <td>Spy</td>
@@ -394,7 +394,7 @@
                         <option value="saboteurspy">saboteurspy</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="tank">
                 <td>Tank</td>
@@ -407,7 +407,7 @@
                         <option value="martyrtank">martyrtank</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="templar">
                 <td>Templar</td>
@@ -420,7 +420,7 @@
                         <option value="grandtemplar">grandtemplar</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="vampire">
                 <td>Vampire</td>
@@ -433,7 +433,7 @@
                         <option value="vengefulvampire">vengefulvampire</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="warbeast">
                 <td>Warbeast</td>
@@ -446,7 +446,7 @@
                         <option value="veteranwarbeast">veteranwarbeast</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
             <tr id="warrior">
                 <td>Warrior</td>
@@ -459,7 +459,7 @@
                         <option value="vengefulwarrior">vengefulwarrior</option>
                     </select>
                 </td>
-                <td><input type="number" value="0"></td>
+                <td><input type="number" value="0" min="0"></td>
             </tr>
         </tbody>
 
