fixed potion usage and added ability to use potion on dungeon boss levels

--- a/settings.html
+++ b/settings.html
@@ -733,6 +733,10 @@
                                                         title="Skip dungeons if there aren't dungeon listed captains"><input
                                                                 type="checkbox" id="dungeonSlotSkip">
                                                         Skip if no dungeon list</label></td>
+                                        <td><label for="dungeonBossPotionSwitch"
+                                                        title="Boost unit on dungeon boss levels (every third level). Use at your own risk. This increases chances of the captain banning you." id="dungeonBossPotionPopup"><input
+                                                                type="checkbox" id="dungeonBossPotionSwitch">
+                                                        Boost Unit on Boss Levels</label></td>
                                 </tr>
                                 <tr>
                                         <td>
