--- a/html/units.html
+++ b/html/units.html
@@ -21,6 +21,7 @@
         <button id="log_button" class="green_button">Log</button>
         <button id="unit_button" class="green_button">Units</button>
         <button id="level_button" class="green_button">Level-up</button>
+        <button id="store_button" class="green_button">Chests</button>
         <button id="instructions_button" class="green_button">Instructions</button>
         <button id="key_check_button" class="green_button">Key check</button>
     </div>
