added dark mode option for settings pages

--- a/html/chests.html
+++ b/html/chests.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chests</title>
+    <script src="/javascript/shared_scripts.js"></script>
     <script src="/javascript/store.js"></script>
     <script src="/storage_manager.js"></script>
     <script src="/popup.js"></script>
