--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Autoraiders</title>
+    <script src="/javascript/shared_scripts.js"></script>
     <script src="popup.js"></script>
     <script src="pause.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/popup_styles.css">
