--- a/html/whitelist.html
+++ b/html/whitelist.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priority lists</title>
+    <script src="/javascript/shared_scripts.js"></script>
     <script src="/javascript/whitelist.js"></script>
     <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
