--- a/settings.html
+++ b/settings.html
@@ -22,7 +22,8 @@
                 <button id="key_check_button" class="green_button">Key check</button>
         </div>
         <h1 style="font-size: xx-large;">Set your preferences here</h1>
-        <div class="center" style="width: fit-content;"><a href="#General">General</a> | <a href="#Collecting">Collecting</a> | <a href="#Skins">Skins</a> | <a href="#Campaign">Campaign</a> | <a href="#PVP">PVP</a> | <a href="#Dungeons">Dungeons</a> | <a href="#Masterlist">Masterlist</a> | <a href="#Loyalty">Loyalty</a> | <a href="#UnitsperLevelChest">Units per Level/Chest</a>
+        <div class="center" style="width: fit-content;">
+                <a href="#General">General</a> | <a href="#Collecting">Collecting</a> | <a href="#Skins">Skins</a> | <a href="#Campaign">Campaign</a> | <a href="#PVP">PVP</a> | <a href="#Dungeons">Dungeons</a> | <a href="#Masterlist">Masterlist</a> | <a href="#Loyalty">Loyalty</a> | <a href="#UnitsperLevelChest">Units per Level/Chest</a>
         </div>
         <div class="center" style="max-width:1000px">
                 <table width="100%">
@@ -30,6 +31,15 @@
                                 <tr>
                                         <td>
                                                 <div id="General" style="font-size:1.25em;font-style:italic">General</div>
+                                        </td>
+                                </tr>
+                        </tbody>
+                </table>
+                <table width="100%">
+                        <tbody>
+                                <tr>
+                                        <td>
+                                                <label for="darkSwitch"><input type="checkbox" id="darkSwitch"> Dark theme for Settings pages</label>
                                         </td>
                                 </tr>
                         </tbody>
