added chest reward log

--- a/html/chests.html
+++ b/html/chests.html
@@ -50,6 +50,7 @@
             priority: </label>
         <select id="buy_one_key_skin"></select><br><br>
         <button id="save_btn" class="green_button">SAVE</button>
+        <div><a href="./chest_log.html" target="_blank">Chest Reward Log</a></div>
         <div style="margin-top: 20px;" id="chest_container">Times shown in American format (MM/DD/YYYY)<br>Times shown
             in your local time (Probably)<br>-1 quantity means an unlimited amount can be bought</div>
 
