--- a/html/chests.html
+++ b/html/chests.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chests</title>
     <script src="/javascript/shared_scripts.js"></script>
-    <script src="/javascript/store.js"></script>
+    <script src="/javascript/chests.js"></script>
     <script src="/storage_manager.js"></script>
     <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
@@ -35,25 +35,29 @@
         </div>
         <div style="font-size: large; margin-bottom: 10px;">Minimum operational BONES amount (set to 0 to disable it):
             <input id="min_bone_currency" type="number" value="0" min="0">
-            
+
         </div>
-        <label for="chest_purchase_order"
+        <label for="chestPurchaseOrder"
             title="By default the most expensive chest is acquired first, this overrides it."><input type="checkbox"
-                id="chest_purchase_order">Buy cheapest first</label>
-        <label for="buy_all_skins" title="Skip a chest if all skins were acquired."><input type="checkbox"
-                id="buy_all_skins">Skin priority</label><br>
-        <label for="buy_one__bone_skin" title="Skip a chest if all skins were acquired.">Bone chest fallback under skin
+                id="chestPurchaseOrder">Buy cheapest first</label>
+        <label for="buyAllSkins" title="Skip chests if all skins inside were acquired."><input type="checkbox"
+                id="buyAllSkins">Skin priority</label><br><br>
+        <span>In order for skin priority to work, "Can Buy" must be checked, otherwise the chest won't be bought even if
+            skins haven't been obtained yet.</span><br>
+            <span>Same goes for the fallback chests, if "Can Buy" is not checked, they will be ignored.</span><br><br>
+        <label for="buy_one__bone_skin" title="This chest will be acquired if all skins have been obtained">Bone chest
+            fallback under skin
             priority: </label>
         <select id="buy_one_bone_skin"></select><br>
 
-        <label for="buy_one_key_skin" title="Skip a chest if all skins were acquired.">Skin chest fallback under skin
+        <label for="buy_one_key_skin" title="This chest will be acquired if all skins have been obtained">Skin chest
+            fallback under skin
             priority: </label>
         <select id="buy_one_key_skin"></select><br><br>
         <button id="save_btn" class="green_button">SAVE</button>
         <div><a href="./chest_log.html" target="_blank">Chest Reward Log</a></div>
         <div style="margin-top: 20px;" id="chest_container">Times shown in American format (MM/DD/YYYY)<br>Times shown
             in your local time (Probably)<br>-1 quantity means an unlimited amount can be bought</div>
-
     </div>
 
 
