--- a/html/chests.html
+++ b/html/chests.html
@@ -48,12 +48,12 @@
         <label for="buy_one__bone_skin" title="This chest will be acquired if all skins have been obtained">Bone chest
             fallback under skin
             priority: </label>
-        <select id="buy_one_bone_skin"></select><br>
+        <select id="buy_one_bone_skin"  title="This chest will be acquired if all skins have been obtained"></select><br>
 
         <label for="buy_one_key_skin" title="This chest will be acquired if all skins have been obtained">Skin chest
             fallback under skin
             priority: </label>
-        <select id="buy_one_key_skin"></select><br><br>
+        <select id="buy_one_key_skin" title="This chest will be acquired if all skins have been obtained"></select><br><br>
         <button id="save_btn" class="green_button">SAVE</button>
         <div><a href="./chest_log.html" target="_blank">Chest Reward Log</a></div>
         <div style="margin-top: 20px;" id="chest_container">Times shown in American format (MM/DD/YYYY)<br>Times shown
