--- a/html/chests.html
+++ b/html/chests.html
@@ -40,10 +40,11 @@
         <label for="chestPurchaseOrder"
             title="By default the most expensive chest is acquired first, this overrides it."><input type="checkbox"
                 id="chestPurchaseOrder">Buy cheapest first</label>
+        <h1>SKIN RELATED OPTIONS NOT AVAILABLE YET</h1>
         <label for="buyAllSkins" title="Skip chests if all skins inside were acquired."><input type="checkbox"
                 id="buyAllSkins">Skin priority</label><br><br>
         <span>In order for skin priority to work, "Can Buy" must be checked, otherwise the chest won't be bought even if
-            skins haven't been obtained yet.</span><br>
+            all skins haven't been obtained yet.</span><br>
             <span>Same goes for the fallback chests, if "Can Buy" is not checked, they will be ignored.</span><br><br>
         <label for="buy_one__bone_skin" title="This chest will be acquired if all skins have been obtained">Bone chest
             fallback under skin
