--- a/html/chests.html
+++ b/html/chests.html
@@ -43,18 +43,19 @@
         <h1>SKIN RELATED OPTIONS NOT AVAILABLE YET</h1>
         <label for="buyAllSkins" title="Skip chests if all skins inside were acquired."><input type="checkbox"
                 id="buyAllSkins">Skin priority</label><br><br>
-        <span>In order for skin priority to work, "Can Buy" must be checked, otherwise the chest won't be bought even if
-            all skins haven't been obtained yet.</span><br>
-            <span>Same goes for the fallback chests, if "Can Buy" is not checked, they will be ignored.</span><br><br>
+        <span>In order for skin priority to work, "Can Buy" must be checked in the table below, otherwise the chest
+            won't be bought even if all skins haven't been obtained yet.</span><br>
+        <span>Same goes for the fallback chests, if "Can Buy" is not checked, they will be ignored.</span><br><br>
         <label for="buy_one__bone_skin" title="This chest will be acquired if all skins have been obtained">Bone chest
             fallback under skin
             priority: </label>
-        <select id="buy_one_bone_skin"  title="This chest will be acquired if all skins have been obtained"></select><br>
+        <select id="buy_one_bone_skin" title="This chest will be acquired if all skins have been obtained"></select><br>
 
         <label for="buy_one_key_skin" title="This chest will be acquired if all skins have been obtained">Skin chest
             fallback under skin
             priority: </label>
-        <select id="buy_one_key_skin" title="This chest will be acquired if all skins have been obtained"></select><br><br>
+        <select id="buy_one_key_skin"
+            title="This chest will be acquired if all skins have been obtained"></select><br><br>
         <button id="save_btn" class="green_button">SAVE</button>
         <div><a href="./chest_log.html" target="_blank">Chest Reward Log</a></div>
         <div style="margin-top: 20px;" id="chest_container">Times shown in American format (MM/DD/YYYY)<br>Times shown
