Added skin chest purchase order

--- a/html/chests.html
+++ b/html/chests.html
@@ -41,6 +41,8 @@
             title="By default the most expensive chest is acquired first, this overrides it."><input type="checkbox"
                 id="chestPurchaseOrder">Buy cheapest first</label>
         <h1>SKIN RELATED OPTIONS NOT AVAILABLE YET</h1>
+        <label for="skinChestFocus" title="Only move to the next chest after all skins have been acquired."><input type="checkbox"
+            id="skinChestFocus">Chest focus</label><br><br>
         <label for="buyAllSkins" title="Skip chests if all skins inside were acquired."><input type="checkbox"
                 id="buyAllSkins">Skin priority</label><br><br>
         <span>In order for skin priority to work, "Can Buy" must be checked in the table below, otherwise the chest
