--- a/html/chests.html
+++ b/html/chests.html
@@ -53,7 +53,7 @@
             priority: </label>
         <select id="buy_one_bone_skin" title="This chest will be acquired if all skins have been obtained"></select><br>
 
-        <label for="buy_one_key_skin" title="This chest will be acquired if all skins have been obtained">Skin chest
+        <label for="buy_one_key_skin" title="This chest will be acquired if all skins have been obtained">Key chest
             fallback under skin
             priority: </label>
         <select id="buy_one_key_skin"
