--- a/html/chest_log.html
+++ b/html/chest_log.html
@@ -26,8 +26,11 @@
 
     <div class="center-container">
         <h1>Chest Reward Log</h1>
+        <h2>% represents the rate at which you obtained that item in a specific slot for a given ChestId. For instance, if a single Amazon scroll in Slot 1 has a percentage of 20, it means that 20% of the chests with that specific ChestId contained a single Amazon scroll in Slot 1.</h2>
+        <h2>After you've accumulated a decent amount of log entries, this number will show the <i>approximate</i> chance of getting each loot item.</h2>
         <div class="counter-container"></div>
     </div>
+    <div id="dataContainer"></div><br><br>
     <button id="scrollBtn" title="Go to top">↑</button>
 
 </body>
